--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Школа</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Playfair Display', serif;
       background-color: #f4f4f4;
       color: #333;
     }
@@ -26,8 +26,8 @@
     }
     .school-address {
       text-align: center;
-      font-size: 20px;
-      font-weight: bold;
+      font-size: 16px;
+      font-weight: normal;
     }
     .contacts {
       text-align: right;
@@ -44,10 +44,33 @@
       margin-left: 5px;
       cursor: pointer;
     }
+    .nav-wrapper {
+      background-color: #005bff; /* Цвет OZON */
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      border-bottom: 2px solid #ccc;
+    }
+    nav {
+      display: flex;
+      gap: 30px;
+    }
+    nav a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      padding: 5px 10px;
+      border-radius: 4px;
+      transition: background-color 0.3s;
+    }
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
     main {
       display: flex;
       justify-content: space-between;
-      padding: 20px;
+      padding: 30px 20px;
     }
     .left-side {
       width: 45%;
@@ -79,19 +102,6 @@
     .right-side img {
       max-width: 100%;
       border-radius: 10px;
-    }
-    nav {
-      border-top: 2px solid #ccc;
-      padding: 10px;
-      background-color: #fff;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    nav a {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
     }
     footer {
       display: flex;
@@ -127,6 +137,16 @@
     </div>
   </header>
 
+  <div class="nav-wrapper">
+    <nav>
+      <a href="#about">О школе</a>
+      <a href="#schedule">Расписание</a>
+      <a href="#teachers">Преподаватели</a>
+      <a href="#courses">Курсы</a>
+      <a href="#contacts">Контакты</a>
+    </nav>
+  </div>
+
   <main>
     <div class="left-side">
       <h1>Наша школа</h1>
@@ -149,14 +169,6 @@
       <p>Описание под изображением (добавите сами)</p>
     </div>
   </main>
-
-  <nav>
-    <a href="#">О школе</a>
-    <a href="#">Расписание</a>
-    <a href="#">Преподаватели</a>
-    <a href="#">Курсы</a>
-    <a href="#">Контакты</a>
-  </nav>
 
   <footer>
     <div class="footer-section">
