--- a/index.html
+++ b/index.html
@@ -165,20 +165,20 @@
       </div>
     </div>
     <div class="right-side">
-      <img src="school_image.jpg" alt="Школа" />
+      <img src="heros.jpg" alt="Школа" />
       <p>Описание под изображением (добавите сами)</p>
     </div>
   </main>
 
   <footer>
     <div class="footer-section">
-      <img src="logo1.png" alt="Логотип 1" />
+      <img src="logo1.webp" alt="Логотип 1" />
       <p>Партнёр 1</p>
       <p>Краткое описание</p>
       <p>ещё строка</p>
     </div>
     <div class="footer-section">
-      <img src="logo2.png" alt="Логотип 2" />
+      <img src="logo2.webp" alt="Логотип 2" />
       <p>Партнёр 2</p>
       <p>Краткое описание</p>
       <p>ещё строка</p>
