--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       display: flex;
       justify-content: space-around;
       align-items: flex-start;
-      background-color: #333;
+      background-color: #ccffff;
       color: #fff;
       padding: 20px;
     }
@@ -132,7 +132,7 @@
       <p>+7 (999) 123-45-67</p>
       <div class="messengers">
         <a href="https://t.me/your_channel" target="_blank"><img src="telegram.png" alt="Telegram" /></a>
-        <a href="https://wa.me/79991234567" target="_blank"><img src="whatsapp.png" alt="WhatsApp" /></a>
+        <a href="https://wa.me/79991234567" target="_blank"><img src="whatsapp.webp" alt="WhatsApp" /></a>
       </div>
     </div>
   </header>
@@ -184,7 +184,7 @@
       <p>ещё строка</p>
     </div>
     <div class="footer-section">
-      <img src="logo3.png" alt="Логотип 3" />
+      <img src="logo3.webp" alt="Логотип 3" />
       <p>Партнёр 3</p>
       <p>Краткое описание</p>
       <p>ещё строка</p>
