--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       display: flex;
       justify-content: space-around;
       align-items: flex-start;
-      background-color: #ccffff;
-      color: #fff;
+      background-color: #ccccff;
+      color: #333;
       padding: 20px;
     }
     .footer-section {
@@ -127,36 +127,49 @@
 <body>
   <header>
     <img src="logo.png" alt="Логотип" class="logo" />
-    <div class="school-address">г. Пример, ул. Школьная, 10</div>
+      <h1>Игровой формат</h1>
+    <div class="school-address">г. Каспийск, ул. Школьная, 10</div>
     <div class="contacts">
-      <p>+7 (999) 123-45-67</p>
+      <p>+7 (929) 880-06-62</p>
       <div class="messengers">
-        <a href="https://t.me/your_channel" target="_blank"><img src="telegram.png" alt="Telegram" /></a>
-        <a href="https://wa.me/79991234567" target="_blank"><img src="whatsapp.webp" alt="WhatsApp" /></a>
+        <a href="https://t.me/tigroketa" target="_blank"><img src="telegram.png" alt="Telegram" /></a>
+        <a href="https://wa.me/79996353969" target="_blank"><img src="whatsapp.webp" alt="WhatsApp" /></a>
       </div>
     </div>
   </header>
 
   <div class="nav-wrapper">
     <nav>
-      <a href="#about">О школе</a>
+      <a href="#about">О проекте</a>
       <a href="#schedule">Расписание</a>
       <a href="#teachers">Преподаватели</a>
       <a href="#courses">Курсы</a>
+      href=""
+target="_blank"
+aria-expanded="false" role="button" data-menu-submenu-hook="link_sub2_703802160">
+Курсы</a> <div class="t-menusub" data-submenu-hook="link_sub2_703802160" data-submenu-margin="15px" data-add-submenu-arrow="on"> <div class="t-menusub__menu"> <div class="t-menusub__content"> <ul role="list" class="t-menusub__list"> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/podgotovka-k-shkole" data-menu-item-number="2">Эмоциональный интеллект и коммуникация</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/obuchenie-v-0-4-classe" data-menu-item-number="2">Критическое мышление и медиа-грамотность</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/obuchenie-v-5-11-classe" data-menu-item-number="2">Клуб актеров и находчивых</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/mixed" data-menu-item-number="2">Английский по фильмам</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/online" data-menu-item-number="2">Креативное мышление и сторителлинг</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
+href="https://a-edu.ru/externat" data-menu-item-number="2">Финансовая грамотность</a> </li> </ul> </div> </div> </div> </li> <li class="t229__list_item" 
+style="padding:0 15px;"> <a class="t-menu__link-item"
+href="#languages" data-menu-submenu-hook="">
       <a href="#contacts">Контакты</a>
     </nav>
   </div>
 
   <main>
     <div class="left-side">
-      <h1>Наша школа</h1>
+      <h1>Школа будущего навыка</h1>
       <p>— Современное образование</p>
-      <p>— Индивидуальный подход</p>
+      <p>— Игровой подход</p>
       <p>— Профессиональные педагоги</p>
       <p>— Творческое развитие</p>
       <p>— Безопасная среда</p>
       <p>— Комфортная атмосфера</p>
-      <p>Дополнительные занятия</p>
+      <p>Игровые сертификаты</p>
       <p>Развитие навыков</p>
       <p>Поддержка родителей</p>
       <div class="buttons">
@@ -165,7 +178,7 @@
       </div>
     </div>
     <div class="right-side">
-      <img src="heros.jpg" alt="Школа" />
+      <img src="heros.jpg" alt="Занятия" />
       <p>Описание под изображением (добавите сами)</p>
     </div>
   </main>
