--- a/index.html
+++ b/index.html
@@ -143,19 +143,17 @@
       <a href="#about">О проекте</a>
       <a href="#schedule">Расписание</a>
       <a href="#teachers">Преподаватели</a>
-      <a href="#courses">Курсы</a>
-      href=""
-target="_blank"
-aria-expanded="false" role="button" data-menu-submenu-hook="link_sub2_703802160">
-Курсы</a> <div class="t-menusub" data-submenu-hook="link_sub2_703802160" data-submenu-margin="15px" data-add-submenu-arrow="on"> <div class="t-menusub__menu"> <div class="t-menusub__content"> <ul role="list" class="t-menusub__list"> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/podgotovka-k-shkole" data-menu-item-number="2">Эмоциональный интеллект и коммуникация</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/obuchenie-v-0-4-classe" data-menu-item-number="2">Критическое мышление и медиа-грамотность</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/obuchenie-v-5-11-classe" data-menu-item-number="2">Клуб актеров и находчивых</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/mixed" data-menu-item-number="2">Английский по фильмам</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/online" data-menu-item-number="2">Креативное мышление и сторителлинг</a> </li> <li class="t-menusub__list-item t-name t-name_xs"> <a class="t-menusub__link-item t-name t-name_xs"
-href="https://a-edu.ru/externat" data-menu-item-number="2">Финансовая грамотность</a> </li> </ul> </div> </div> </div> </li> <li class="t229__list_item" 
-style="padding:0 15px;"> <a class="t-menu__link-item"
-href="#languages" data-menu-submenu-hook="">
+      <div class="dropdown">
+        <button class="dropdown-button">Курсы</button>
+        <div class="dropdown-content">
+          <a href="#course1">Эмоциональный интеллект и коммуникация</a>
+          <a href="#course2">Критическое мышление и медиа-грамотность</a>
+          <a href="#course3">Клуб актеров и находчивых</a>
+          <a href="#course4">Английский по фильмам</a>
+          <a href="#course5">Креативное мышление и сторителлинг</a>
+          <a href="#course6">Финансовая грамотность</a>
+        </div>
+      </div>
       <a href="#contacts">Контакты</a>
     </nav>
   </div>
@@ -163,7 +161,7 @@ href="#languages" data-menu-submenu-hook="">
   <main>
     <div class="left-side">
       <h1>Школа будущего навыка</h1>
-      <p>— Современное образование</p>
+      <p>— Образовательные программы</p>
       <p>— Игровой подход</p>
       <p>— Профессиональные педагоги</p>
       <p>— Творческое развитие</p>
