--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px;
-      background-color: #ffffff;
+      background-color: #edf2f4;
       border-bottom: 2px solid #ccc;
     }
     .logo {
@@ -89,7 +89,7 @@
       padding: 10px 20px;
       margin-right: 10px;
       border: none;
-      background-color: #4CAF50;
+      background-color: #edf2f4;
       color: white;
       border-radius: 5px;
       cursor: pointer;
