--- a/index.html
+++ b/index.html
@@ -11,26 +11,39 @@
       font-family: 'Playfair Display', serif;
       background-color: #f4f4f4;
       color: #333;
+      padding: 0;
+      box-sizing: border-box;
     }
     header {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      padding: 20px;
-      background-color: #edf2f4;
+      gap: 60px;
+      padding: 20px 0;
+      background-color: #ffffff;
       border-bottom: 2px solid #ccc;
+      text-align: center;
+    }
+    .logo-title {
+      display: flex;
+      align-items: center;
+      gap: 15px;
     }
     .logo {
       width: 80px;
       height: auto;
     }
+    .logo-text {
+      font-size: 24px;
+      font-weight: bold;
+      color: #005bff;
+    }
     .school-address {
-      text-align: center;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: normal;
     }
     .contacts {
-      text-align: right;
+      text-align: center;
     }
     .contacts p {
       margin: 0;
@@ -45,17 +58,21 @@
       cursor: pointer;
     }
     .nav-wrapper {
-      background-color: #005bff; /* Цвет OZON */
-      padding: 10px 0;
+      background-color: #005bff;
+      padding: 20px 0;
       display: flex;
       justify-content: center;
       border-bottom: 2px solid #ccc;
     }
     nav {
       display: flex;
-      gap: 30px;
+      justify-content: space-between;
+      width: 800px;
+      position: relative;
+      gap: 60px;
     }
-    nav a {
+    nav a,
+    .dropdown-button {
       text-decoration: none;
       color: white;
       font-weight: bold;
@@ -63,24 +80,74 @@
       padding: 5px 10px;
       border-radius: 4px;
       transition: background-color 0.3s;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
-    nav a:hover {
+    nav a:hover,
+    .dropdown-button:hover {
       background-color: rgba(255, 255, 255, 0.2);
+    }
+    .dropdown {
+      position: relative;
+    }
+    .dropdown-button::after {
+      content: '\25BC';
+      display: inline-block;
+      margin-left: 5px;
+      transition: transform 0.3s ease;
+      font-size: 8px;
+    }
+    .dropdown:hover .dropdown-button::after {
+      transform: rotate(180deg);
+    }
+    .dropdown-content {
+      display: block;
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-10px);
+      transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
+      position: absolute;
+      top: 35px;
+      left: 0;
+      background-color: white;
+      min-width: 250px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+      z-index: 1;
+      border-radius: 6px;
+      padding: 10px;
+    }
+    .dropdown-content a {
+      color: #333;
+      padding: 8px 12px;
+      text-decoration: none;
+      display: block;
+      border-radius: 4px;
+    }
+    .dropdown-content a:hover {
+      background-color: #f0f0f0;
+    }
+    .dropdown:hover .dropdown-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
     }
     main {
       display: flex;
-      justify-content: space-between;
-      padding: 30px 20px;
+      justify-content: center;
+      gap: 60px;
+      padding: 30px 0;
     }
     .left-side {
-      width: 45%;
+      max-width: 500px;
     }
     .left-side h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
+      font-size: 40px;
+      margin-bottom: 15px;
     }
     .left-side p {
-      margin: 5px 0;
+      margin: 14px 0;
+      font-size: 22px;
     }
     .buttons {
       margin-top: 20px;
@@ -89,14 +156,14 @@
       padding: 10px 20px;
       margin-right: 10px;
       border: none;
-      background-color: #edf2f4;
+      background-color: #4CAF50;
       color: white;
       border-radius: 5px;
       cursor: pointer;
       font-size: 16px;
     }
     .right-side {
-      width: 50%;
+      max-width: 500px;
       text-align: center;
     }
     .right-side img {
@@ -104,12 +171,21 @@
       border-radius: 10px;
     }
     footer {
-      display: flex;
-      justify-content: space-around;
-      align-items: flex-start;
       background-color: #ccccff;
       color: #333;
+      padding: 20px 0;
+      display: flex;
+      justify-content: center;
+    }
+    .footer-wrapper {
+      display: flex;
+      justify-content: space-around;
+      width: 90%;
+      background-color: #444;
+      border: 1px solid #ccccff;
+      border-radius: 16px;
       padding: 20px;
+      box-sizing: border-box;
     }
     .footer-section {
       text-align: center;
@@ -125,15 +201,17 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Логотип" class="logo" />
-      <h1>Игровой формат</h1>
+<header>
+    <div class="logo-title">
+      <img src="logo.png" alt="Логотип" class="logo" />
+      <div class="logo-text">Игровой формат</div>
+    </div>
     <div class="school-address">г. Каспийск, ул. Школьная, 10</div>
     <div class="contacts">
       <p>+7 (929) 880-06-62</p>
       <div class="messengers">
-        <a href="https://t.me/tigroketa" target="_blank"><img src="telegram.png" alt="Telegram" /></a>
-        <a href="https://wa.me/79996353969" target="_blank"><img src="whatsapp.webp" alt="WhatsApp" /></a>
+        <a href="https://t.me/your_channel" target="_blank"><img src="telegram.png" alt="Telegram" /></a>
+        <a href="https://wa.me/79991234567" target="_blank"><img src="whatsapp.webp" alt="WhatsApp" /></a>
       </div>
     </div>
   </header>
@@ -176,29 +254,31 @@
       </div>
     </div>
     <div class="right-side">
-      <img src="heros.jpg" alt="Занятия" />
+      <img src="heros.jpg" alt="Школа" />
       <p>Описание под изображением (добавите сами)</p>
     </div>
   </main>
 
   <footer>
-    <div class="footer-section">
-      <img src="logo1.webp" alt="Логотип 1" />
-      <p>Партнёр 1</p>
-      <p>Краткое описание</p>
-      <p>ещё строка</p>
-    </div>
-    <div class="footer-section">
-      <img src="logo2.webp" alt="Логотип 2" />
-      <p>Партнёр 2</p>
-      <p>Краткое описание</p>
-      <p>ещё строка</p>
-    </div>
-    <div class="footer-section">
-      <img src="logo3.webp" alt="Логотип 3" />
-      <p>Партнёр 3</p>
-      <p>Краткое описание</p>
-      <p>ещё строка</p>
+    <div class="footer-wrapper">
+      <div class="footer-section">
+        <img src="logo1.webp" alt="Логотип 1" />
+        <p>Партнёр 1</p>
+        <p>Краткое описание</p>
+        <p>ещё строка</p>
+      </div>
+      <div class="footer-section">
+        <img src="logo2.webp" alt="Логотип 2" />
+        <p>Партнёр 2</p>
+        <p>Краткое описание</p>
+        <p>ещё строка</p>
+      </div>
+      <div class="footer-section">
+        <img src="logo3.webp" alt="Логотип 3" />
+        <p>Партнёр 3</p>
+        <p>Краткое описание</p>
+        <p>ещё строка</p>
+      </div>
     </div>
   </footer>
 </body>
