--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       font-size: 16px;
     }
     .right-side {
-      max-width: 500px;
+      width: 50%;
       text-align: center;
     }
     .right-side img {
@@ -171,7 +171,7 @@
       border-radius: 10px;
     }
     footer {
-      background-color: #ccccff;
+      background-color: #f4f4f4;
       color: #333;
       padding: 20px 0;
       display: flex;
@@ -181,7 +181,7 @@
       display: flex;
       justify-content: space-around;
       width: 90%;
-      background-color: #444;
+      background-color: #ccccff;
       border: 1px solid #ccccff;
       border-radius: 16px;
       padding: 20px;
