--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 60px;
+      gap: 40px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
@@ -181,8 +181,8 @@
       display: flex;
       justify-content: space-around;
       width: 90%;
-      background-color: #ccccff;
-      border: 1px solid #ccccff;
+      background-color: #99ccff;
+      border: 1px solid #99ccff;
       border-radius: 16px;
       padding: 20px;
       box-sizing: border-box;
@@ -245,7 +245,10 @@
       <p>— Творческое развитие</p>
       <p>— Безопасная среда</p>
       <p>— Комфортная атмосфера</p>
-      <p>Игровые сертификаты</p>
+      <p>
+        
+        
+        Игровые сертификаты</p>
       <p>Развитие навыков</p>
       <p>Поддержка родителей</p>
       <div class="buttons">
