--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     }
     header {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      gap: 40px;
+      gap: 60px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
