--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     }
     header {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      gap: 60px;
+      gap: 100px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
@@ -69,7 +69,7 @@
       justify-content: space-between;
       width: 800px;
       position: relative;
-      gap: 60px;
+      gap: 100px;
     }
     nav a,
     .dropdown-button {
