--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin: 0;
     }
     .messengers {
-      margin-top: 10px;
+      margin-top: 5px;
     }
     .messengers img {
       width: 24px;
@@ -66,17 +66,17 @@
     }
     nav {
       display: flex;
-      justify-content: space-between;
-      width: 800px;
+      justify-content: center;
+      width: 1000px;
       position: relative;
-      gap: 200px;
+      gap: 100px;
     }
     nav a,
     .dropdown-button {
       text-decoration: none;
       color: white;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 20px;
       padding: 5px 10px;
       border-radius: 4px;
       transition: background-color 0.3s;
@@ -96,7 +96,7 @@
       display: inline-block;
       margin-left: 5px;
       transition: transform 0.3s ease;
-      font-size: 8px;
+      font-size: 18px;
     }
     .dropdown:hover .dropdown-button::after {
       transform: rotate(180deg);
@@ -135,7 +135,7 @@
     main {
       display: flex;
       justify-content: center;
-      gap: 200px;
+      gap: 60px;
       padding: 30px 0;
     }
     .left-side {
