--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 300px;
+      gap: 400px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
@@ -34,7 +34,7 @@
       height: auto;
     }
     .logo-text {
-      font-size: 24px;
+      font-size: 40px;
       font-weight: bold;
       color: #005bff;
     }
@@ -241,14 +241,13 @@
       <h1>Школа будущего навыка</h1>
       <p>— Образовательные программы</p>
       <p>— Игровой подход</p>
-      <p>— Профессиональные педагоги</p>
+      <p>— Внешкольные предметы</p>
       <p>— Творческое развитие</p>
-      <p>— Безопасная среда</p>
+      <p>— Формирование навыков работы в команде</p>
       <p>— Комфортная атмосфера</p>
-      <p>
-        
-        
-        Игровые сертификаты</p>
+      <p> </p>
+      <p> </p>
+      <p>Игровые сертификаты</p>
       <p>Развитие навыков</p>
       <p>Поддержка родителей</p>
       <div class="buttons">
@@ -258,7 +257,7 @@
     </div>
     <div class="right-side">
       <img src="heros.jpg" alt="Школа" />
-      <p>Описание под изображением (добавите сами)</p>
+      <p>Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
     </div>
   </main>
 
@@ -266,21 +265,21 @@
     <div class="footer-wrapper">
       <div class="footer-section">
         <img src="logo1.webp" alt="Логотип 1" />
-        <p>Партнёр 1</p>
-        <p>Краткое описание</p>
-        <p>ещё строка</p>
+        <p>Вовлечённость способствует лучшему усвоению материала.</p>
+        <p>Увеличивает концентрацию – игровой процесс требует внимания</p>
+        <p>Формирует ассоциативное мышление – легко связывать факты.</p>
       </div>
       <div class="footer-section">
         <img src="logo2.webp" alt="Логотип 2" />
-        <p>Партнёр 2</p>
-        <p>Краткое описание</p>
-        <p>ещё строка</p>
+        <p>Ускоряет освоение сложных тем – игра упрощает подачу материала.</p>
+        <p>Формирует стратегическое мышление</p>
+        <p>Снижает тревожность в общении</p>
       </div>
       <div class="footer-section">
         <img src="logo3.webp" alt="Логотип 3" />
-        <p>Партнёр 3</p>
-        <p>Краткое описание</p>
-        <p>ещё строка</p>
+        <p>Делает обучение позитивным опытом</p>
+        <p>Адаптируется под уровень ученика</p>
+        <p>Подходит для разных стилей обучения</p>
       </div>
     </div>
   </footer>
