--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 400px;
+      gap: 350px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
@@ -227,7 +227,7 @@
           <a href="#course1">Эмоциональный интеллект и коммуникация</a>
           <a href="#course2">Критическое мышление и медиа-грамотность</a>
           <a href="#course3">Клуб актеров и находчивых</a>
-          <a href="#course4">Английский по фильмам</a>
+          <a href="#course4">Английский по фильмам и играм</a>
           <a href="#course5">Креативное мышление и сторителлинг</a>
           <a href="#course6">Финансовая грамотность</a>
         </div>
@@ -240,7 +240,7 @@
     <div class="left-side">
       <h1>Школа будущего навыка</h1>
       <p>— Образовательные программы</p>
-      <p>— Игровой подход</p>
+      <p>— Игровой подход(2-я половина занятия)</p>
       <p>— Внешкольные предметы</p>
       <p>— Творческое развитие</p>
       <p>— Формирование навыков работы в команде</p>
@@ -265,13 +265,13 @@
     <div class="footer-wrapper">
       <div class="footer-section">
         <img src="logo1.webp" alt="Логотип 1" />
-        <p>Вовлечённость способствует лучшему усвоению материала.</p>
+        <p>Вовлечённость способствует лучшему усвоению материала</p>
         <p>Увеличивает концентрацию – игровой процесс требует внимания</p>
-        <p>Формирует ассоциативное мышление – легко связывать факты.</p>
+        <p>Формирует ассоциативное мышление – легко связывать факты</p>
       </div>
       <div class="footer-section">
         <img src="logo2.webp" alt="Логотип 2" />
-        <p>Ускоряет освоение сложных тем – игра упрощает подачу материала.</p>
+        <p>Ускоряет освоение сложных тем – игра упрощает подачу материала</p>
         <p>Формирует стратегическое мышление</p>
         <p>Снижает тревожность в общении</p>
       </div>
