--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 350px;
+      gap: 330px;
       padding: 20px 0;
       background-color: #ffffff;
       border-bottom: 2px solid #ccc;
@@ -257,7 +257,7 @@
     </div>
     <div class="right-side">
       <img src="heros.jpg" alt="Школа" />
-      <p>Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
+      <p>🧠Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
     </div>
   </main>
 
