--- a/index.html
+++ b/index.html
@@ -150,17 +150,17 @@
       font-size: 22px;
     }
     .buttons {
-      margin-top: 20px;
+      margin-top: 30px;
     }
     .buttons button {
-      padding: 10px 20px;
-      margin-right: 10px;
+      padding: 15px 30px;
+      margin-right: 15px;
       border: none;
       background-color: #4CAF50;
       color: white;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 22px;
     }
     .right-side {
       width: 50%;
@@ -238,6 +238,7 @@
 
   <main>
     <div class="left-side">
+      <p>—----------------------</p>
       <h1>Школа будущего навыка</h1>
       <p>— Образовательные программы</p>
       <p>— Игровой подход(2-я половина занятия)</p>
@@ -245,11 +246,12 @@
       <p>— Творческое развитие</p>
       <p>— Формирование навыков работы в команде</p>
       <p>— Комфортная атмосфера</p>
-      <p> </p>
-      <p> </p>
-      <p>Игровые сертификаты</p>
-      <p>Развитие навыков</p>
-      <p>Поддержка родителей</p>
+      <p>-----------------------</p>
+      <p>-----------------------</p>
+      <p>🏆 Игровые сертификаты</p>
+      <p>🔹Развитие навыков</p>
+      <p>🌟Поддержка родителей</p>
+      <p>-----------------------</p>
       <div class="buttons">
         <button>Подробнее о нас</button>
         <button>Записаться</button>
@@ -257,7 +259,7 @@
     </div>
     <div class="right-side">
       <img src="heros.jpg" alt="Школа" />
-      <p>🧠Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
+      <p>🎓Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
     </div>
   </main>
 
