--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
     }
     .buttons {
       margin-top: 30px;
+      border-bottom: 2px solid #4CAF50;
+      padding-bottom: 20px;
     }
     .buttons button {
       padding: 15px 30px;
@@ -238,7 +240,7 @@
 
   <main>
     <div class="left-side">
-      <p>-----------------------------------------</p>
+      <p>--------------------------------------------</p>
       <h1>Школа будущего навыка</h1>
       <p>— Образовательные программы</p>
       <p>— Игровой подход(2-я половина занятия)</p>
