--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
       border-bottom: 2px solid #4CAF50;
       padding-bottom: 20px;
     }
+    .buttons::after {
+      content: '';
+      display: block;
+      margin-top: 20px; /* расстояние от кнопок до линии */
+      height: 2px;
+      background-color: #444;
+      width: 100%;
+    }
     .buttons button {
       padding: 15px 30px;
       margin-right: 15px;
