--- a/index.html
+++ b/index.html
@@ -152,14 +152,6 @@
     .buttons {
       margin-top: 30px;
     }
-    .buttons::after {
-      content: '';
-      display: block;
-      margin-top: 40px; /* расстояние от кнопок до линии */
-      height: 2px;
-      background-color: #444;
-      width: 100%;
-    }
     .buttons button {
       padding: 15px 30px;
       margin-right: 15px;
@@ -177,6 +169,12 @@
     .right-side img {
       max-width: 100%;
       border-radius: 10px;
+    }
+    .main-separator {
+      height: 2px;
+      background-color: #4CAF50;
+      width: 100%;
+      margin: 30px 0;
     }
     footer {
       background-color: #f4f4f4;
@@ -245,6 +243,7 @@
   </div>
 
   <main>
+    <div class="main-separator"></div>
     <div class="left-side">
       <p>--------------------------------------------</p>
       <h1>Школа будущего навыка</h1>
