--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     }
     .main-separator {
       height: 2px;
-      background-color: #4CAF50;
+      background-color: #005bff;
       width: 100%;
       margin: 30px 0;
     }
@@ -243,7 +243,6 @@
   </div>
 
   <main>
-    <div class="main-separator"></div>
     <div class="left-side">
       <p>--------------------------------------------</p>
       <h1>Школа будущего навыка</h1>
@@ -269,6 +268,7 @@
       <p>🎓Возможность для каждого занятия перенесения полученных знаний и умений на игровые упражнения.</p>
     </div>
   </main>
+    <div class="main-separator"></div>
 
   <footer>
     <div class="footer-wrapper">
