--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     }
     .main-separator {
       height: 2px;
-      background-color: #005bff;
-      width: 100%;
+      background-color: #444;
+      width: 75%;
       margin: 30px 0;
     }
     footer {
