--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
     }
     .main-separator {
       height: 2px;
+      justify-content: center;
       background-color: #444;
-      width: 75%;
+      width: 80%;
       margin: 30px 0;
     }
     footer {
