--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
       <p>🏆 Игровые сертификаты</p>
       <p>🔹Развитие навыков</p>
       <p>🌟Поддержка родителей</p>
+      <p>— Возрастная категория - 7-17лет</p>
       <p>-----------------------------------------</p>
       <div class="buttons">
         <button>Подробнее о нас</button>
